fix: adding gig external Id
